--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-_pirj=c7o+q@rga)!7%*ii*(*##oy(85c6f62gay(7om%88^s9
-DEBUG=True
-DB_NAME=railway
+DEBUG=False
+DB_NAME=instagram
 USER=postgres
-PASSWORD=D75CYbig5CnHdY8BIXKx
-HOST=containers-us-west-58.railway.app
-PORT=7790
+PASSWORD=20010514
+HOST=localhost
+PORT=5432
