--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-_pirj=c7o+q@rga)!7%*ii*(*##oy(85c6f62gay(7om%88^s9
-DEBUG=False
+DEBUG=True
 DB_NAME=instagram
 USER=postgres
 PASSWORD=20010514
